Add option to Restart SystemUI to DevSettings
Also add in helpers

Change-Id: I7c09d3732557fd155b9d64beae66b011ee0df091
Signed-off-by: Corey Edwards <ensabahnur16@gmail.com>

Conflicts:
	src/com/android/settings/DevelopmentSettings.java

Conflicts:
	res/values/screwd_strings.xml
	res/xml/development_prefs.xml
	src/com/android/settings/DevelopmentSettings.java

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -60,4 +60,7 @@
     <string name="summary_heads_up_enabled">Pop-up notifications are enabled</string>
     <string name="summary_heads_up_disabled">Pop-up notifications are disabled</string>
 
+    <!-- Restart SystemUI -->
+    <string name="restart_systemui">Restart SystemUI</string>
+
 </resources>
