settings: add CPU info overlay [2/2]
this shows
CPU temp (if available)
for every core governor + online + freq

Change-Id: I28c1e48c2e613b33c301b61cead70678ab6a2e9b

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -235,4 +235,9 @@
     <string name="notification_volume_option_title">Notification volume</string>
     <string name="ring_notification_volume_option_title">Ring and notification volume</string>
 
+    <!-- UI debug setting: show CPU info? [CHAR LIMIT=25] -->
+    <string name="show_cpu_info">Show CPU info</string>
+    <!-- UI debug setting: show cpu usage summary [CHAR LIMIT=50] -->
+    <string name="show_cpu_info_summary">Screen overlay showing current CPU info</string>
+
 </resources>
