PowerManager: Don't wake up device when charger is plugged/unplugged (2/2)
This will add the option to disable waking up the device when a charger
is plugged or unplugged.

added as well config option to disable volume rocker wake for devices
which do not support it well

Change-Id: Idf37087b4cdee94c8557d67ab3d491d65bc60c36

Conflicts:
	res/values/config.xml
	res/values/slim_strings.xml
	src/com/android/settings/DisplaySettings.java

Conflicts:
	src/com/android/settings/DisplaySettings.java

Conflicts:
	res/values/custom_config.xml
	src/com/android/settings/DisplaySettings.java

--- a/res/values/custom_config.xml
+++ b/res/values/custom_config.xml
@@ -20,4 +20,8 @@
     <item name="config_flingMinLongSwipeThreshold" format="float" type="dimen">0.20</item>
     <item name="config_flingMaxLongSwipeThreshold" format="float" type="dimen">0.50</item>
 
+   <!-- Volume Rocker Wake Support. Some devices do not support (PMU) this.
+        Setting to false will disable Volume Rocker Wake support -->
+    <bool name="config_show_volumeRockerWake">true</bool>
+
 </resources>
