--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -55,4 +55,8 @@
     <!-- When true enable gesture setting. -->
     <bool name="config_gesture_settings_enabled">false</bool>
 
+   <!-- Volume Rocker Wake Support. Some devices do not support (PMU) this.
+        Setting to false will disable Volume Rocker Wake support -->
+    <bool name="config_show_volumeRockerWake">true</bool>
+
 </resources>
