--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -111,6 +111,11 @@
                 android:title="@string/display_auto_rotate_title" />
 
         <PreferenceScreen
+                android:key="display_rotation"
+                android:fragment="com.android.settings.aosip.DisplayRotation"
+                android:title="@string/display_rotation_title" />
+
+        <PreferenceScreen
                 android:key="wifi_display"
                 android:title="@string/wifi_display_settings_title"
                 settings:keywords="@string/keywords_display_cast_screen"
