--- a/res/values/cm_colors.xml
+++ b/res/values/cm_colors.xml
@@ -15,8 +15,13 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <resources>
-    <color name="floating_action_button_touch_tint">#80ffffff</color>
     <color name="theme_accent">#ff009688</color>
+    <drawable name="expanded_item_bg_activated">#ffEEEEEE</drawable>
+    <drawable name="expanded_item_bg">@android:color/background_light</drawable>
+    <color name="expanded_button_color_normal">#4CAF50</color>
+    <color name="expanded_button_color_close">#F44336</color>
+    <color name="floating_action_button_touch_tint">#80ffffff</color>
+    <color name="qs_tile_tint_color">#FF009587</color>
 
     <!-- Hard coded background and text colors exposed for better theme support -->
     <color name="background_color_darker_gray">@android:color/darker_gray</color>
