--- a/res/values/custom_colors.xml
+++ b/res/values/custom_colors.xml
@@ -12,5 +12,12 @@
     <color name="owlsnest_indicator_color">@color/owlsnest_tab_text_color</color>
     <color name="owlsnest_underline_color">@color/theme_accent</color>
     <color name="owlsnest_divider_color">@color/owlsnest_underline_color</color>
+
+    <!-- Expanded desktop -->
+    <drawable name="expanded_item_bg_activated">#ffEEEEEE</drawable>
+    <drawable name="expanded_item_bg">@android:color/background_light</drawable>
+    <color name="expanded_button_color_normal">#4CAF50</color>
+    <color name="expanded_button_color_close">#F44336</color>
+
 </resources>
 
