--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -59,6 +59,16 @@
     <string name="contexual_header_title">Contexual header</string>
     <string name="status_bar_custom_header_title">Custom header image</string>
     <string name="status_bar_custom_header_summary">Enable notification panel header image</string>
+
+    <!-- Battery Bar -->
+    <string name="battery_bar_style_title">Style</string>
+    <string name="battery_bar_location">Battery bar location</string>
+    <string name="battery_bar_colors">Color</string>
+    <string name="battery_bar">Battery Bar</string>
+    <string name="battery_bar_thickness_title">Battery bar thickness</string>
+    <string name="battery_bar_animate_title">Charging animation</string>
+    <string name="battery_bar_animate_summary">Enable bar animation while charging</string>
+    <string name="battery_bar_color">Battery bar color</string>
     <string name="status_bar_icon_blacklist_title">Visible</string>
     <string name="status_bar_icon_blacklist_summary">Adjust visible icons</string>
 
