--- a/res/xml/aosip_battery.xml
+++ b/res/xml/aosip_battery.xml
@@ -20,5 +20,10 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/battery_category" >
 
+    <PreferenceScreen
+    	android:key="battery_bar"
+        android:fragment="com.android.settings.aosip.statusbar.BatteryBar"
+        android:title="@string/battery_bar" />
+
 </PreferenceScreen>
 
