Add tile to launch BitSyko Layers App from Settings
* Update to the new marshmallow tint

Conflicts:
	res/values/chroma_strings.xml

Conflicts:
	res/values/chroma_strings.xml
	res/xml/dashboard_categories.xml

Conflicts:
	res/values/krexus_strings.xml

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -73,6 +73,9 @@
     <string name="status_bar_clock_title">Clock and date style</string>
     <string name="status_bar_misc_title">Miscellaneous</string>
 
+    <!--  BitSyko Layers header name -->
+    <string name="bitsyko_layers">Layers</string>
+
     <!-- Expanded desktop -->
     <string name="expanded_desktop_category">Expanded Desktop</string>
     <string name="expanded_hide_nothing">Hide nothing</string>
