--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -54,4 +54,10 @@
     <string name="gestureanywhere_category">Gesture anywhere</string>
     <string name="sidebar_category">App sidebar</string>
 
+    <!-- Heads up -->
+    <string name="headsup_section_header">Heads up notifications</string>
+    <string name="heads_up_notifications">Heads up</string>
+    <string name="summary_heads_up_enabled">Pop-up notifications are enabled</string>
+    <string name="summary_heads_up_disabled">Pop-up notifications are disabled</string>
+
 </resources>
