Add toggle for heads up notifications
Change-Id: Ie2f50e3fac70268d1cf0c0cab6cd23d9aec7cdc7
Signed-off-by: Corey Edwards <ensabahnur16@gmail.com>

Conflicts:
	res/xml/notification_settings.xml

Conflicts:
	res/values/screwd_strings.xml
	res/xml/screwd_interface_settings.xml
	res/xml/screwd_notifications_settings.xml

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -887,4 +887,10 @@
     <string name="dashboard_tileview_double_lines_summary_on">Show dashboard tile titles in 1 line</string>
     <string name="dashboard_tileview_double_lines_summary_off">Show dashboard tile titles in 2 lines</string>
 
+    <!-- Heads up -->
+    <string name="headsup_section_header">Heads up notifications</string>
+    <string name="heads_up_notifications">Heads up</string>
+    <string name="summary_heads_up_enabled">Pop-up notifications are enabled</string>
+    <string name="summary_heads_up_disabled">Pop-up notifications are disabled</string>
+
 </resources>
