--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -529,4 +529,9 @@
     <!-- SuperSU -->
     <string name="supersu_title">SuperSU</string>
     <string name="supersu_summary">Customize root permissions</string>
+
+    <!-- Doze notification color invert -->
+    <string name="doze_notification_color_invert_title">Color inversion</string>
+    <string name="doze_notification_color_invert_summary_off">Ambient display notifications will not be inverted. Use for dark themes.</string>
+    <string name="doze_notification_color_invert_summary_on">Ambient display notifications will show as inverted. Use for light/stock theme.</string>
 </resources>
