Settings: Add option for new poly hd custom headers (2/2)
Change-Id: I95d34750c5457af58018a83e7a4cbffb19d3152c

Conflicts:
	res/values/custom_strings.xml
	res/xml/statusbar_settings.xml
	src/com/android/settings/benzo/StatusBarSettings.java

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -917,4 +917,11 @@
     <string name="sm_flags">Build flags</string>
     <string name="sm_flags_default">None</string>
 
+    <!-- Contexual statusbar header-->
+    <string name="contexual_header_title">Contexual header</string>
+    <string name="status_bar_custom_header_title">Custom header image</string>
+    <string name="status_bar_custom_header_summary">Enable notification panel header image</string>
+    <string name="status_bar_custom_header_default_title">Use poly HD images</string>
+    <string name="status_bar_custom_header_default_summary">Enable for poly hd images. Disable for original images.</string>
+
 </resources>
