--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -38,7 +38,6 @@
             android:fragment="com.android.settings.custom.ExpandedDesktop"
             android:title="@string/expanded_desktop_category" />
 
-        <!-- Hide night mode for now
         <ListPreference
             android:key="night_mode"
             android:title="@string/night_mode_title"
@@ -46,7 +45,7 @@
             android:summary="@string/night_mode_summary"
             android:persistent="false"
             android:entries="@array/night_mode_entries"
-            android:entryValues="@array/night_mode_values" /> -->
+            android:entryValues="@array/night_mode_values" />
 
         <PreferenceScreen
                 android:key="wallpaper"
