Include color picker, (2/2):
This color picker (and - preference) is based on the color picker (and - preference) by
Daniel Nilsson and Sergey Margaritov, with some additions by SlimRoms.

DarkKat additions/changes:
- Material dark theme
- Use a full screen dialog
- Add layouts for landscape
- Add layouts for tablets
- Add a "fake" Action bar, (dialogs doesn`t support action bars)
- Move the custom hex value edit text into the "fake" Action bar, (hidden by default)
- Add 2 more panel buttons
- Add a button to show the custom hex value edit text
- Add a button to reset to Android and Darkkat default, (diabled by default)
  (enable via ColorPickerPreference.setDefaultColors(int color, int color)
- Add a button to choose the colors of the panel buttons, (DarkKat, Material or RGB)
- Add an animation for showing/hiding the custom hex value edit text
- Add an color transition animation for the new color panel button
- Add color transition animations for the panel buttons

Conflicts:
	res/values/custom_arrays.xml

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -18,6 +18,15 @@
     <string name="aosip_version">AOSiP Build</string>
     <string name="build_date">Build date</string>
 
+    <!-- Color picker -->
+    <string name="dialog_color_picker_title">Color Picker</string>
+    <string name="press_color_to_apply">Press on color below to apply</string>
+    <string name="palette_darkkat_title">AOSiP</string>
+    <string name="palette_material_title">Material</string>
+    <string name="palette_rgb_title">RGB</string>
+    <string name="reset_android_title">Android default</string>
+    <string name="reset_darkkat_title">AOSiP default</string>
+
     <!-- General strings -->
     <string name="ok">OK</string>
     <string name="reset">Reset</string>
