--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -17,20 +17,20 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
         android:title="@string/about_settings">
 
-        <!-- System update settings - launches activity -->
+        <!-- System update settings - launches activity >
         <PreferenceScreen android:key="system_update_settings"
                 android:title="@string/system_update_settings_list_item_title"
                 android:summary="@string/system_update_settings_list_item_summary">
             <intent android:action="android.settings.SYSTEM_UPDATE_SETTINGS" />
-        </PreferenceScreen>
+        </PreferenceScreen-->
 
 
-        <PreferenceScreen android:key="additional_system_update_settings"
+        <!--PreferenceScreen android:key="additional_system_update_settings"
                           android:title="@string/additional_system_update_settings_list_item_title">
             <intent android:action="android.intent.action.MAIN"
                     android:targetPackage="@string/additional_system_update"
                     android:targetClass="@string/additional_system_update_menu" />
-        </PreferenceScreen>
+        </PreferenceScreen-->
 
         <!-- Device status - launches activity -->
         <PreferenceScreen android:key="status_info"
@@ -76,6 +76,18 @@
                 android:title="@string/model_number"
                 android:summary="@string/device_info_default"/>
 
+        <!-- Device cpu info -->
+        <Preference android:key="device_cpu"
+		style="?android:preferenceInformationStyle"
+		android:title="@string/cpu_info"
+		android:summary="@string/device_info_default"/>
+
+	<!-- Device mem info -->
+	<Preference android:key="device_memory"
+		style="?android:preferenceInformationStyle"
+		android:title="@string/mem_info"
+		android:summary="@string/device_info_default"/>
+
         <!-- Device firmware version -->
         <Preference android:key="firmware_version"
                 android:enabled="false"
@@ -112,6 +124,18 @@
                 android:title="@string/kernel_version"
                 android:summary="@string/device_info_default"/>
 
+        <!-- AOSiP version -->
+	<Preference android:key="aosip_version"
+		style="?android:preferenceInformationStyle"
+		android:title="@string/aosip_version"
+		android:summary="@string/device_info_default" />
+
+	<!-- Build date -->
+	<Preference android:key="build_date"
+		style="?android:preferenceInformationStyle"
+		android:title="@string/build_date"
+		android:summary="@string/device_info_default" />
+
         <!-- Detailed build version -->
         <Preference android:key="build_number"
                 android:enabled="false"
@@ -127,3 +151,4 @@
                 android:summary="@string/selinux_status_enforcing"/>
 
 </PreferenceScreen>
+
