--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -51,6 +51,11 @@
     <string name="buttons_summary">Tweak the actions of your volume and power buttons</string>
     <string name="powermenu_category">Power button</string>
     <string name="volume_category">Volume buttons</string>
+    <!--- Volume keys cursor control -->
+    <string name="ras_volume_keys_cursor_control_title">Cursor control</string>
+    <string name="ras_volume_keys_cursor_control_off">Disabled</string>
+    <string name="ras_volume_keys_cursor_control_on">Key up/down moves cursor left/right</string>
+    <string name="ras_volume_keys_cursor_control_on_reverse">Key up/down moves cursor right/left</string>
 
     <!--Owlsnest lockscreen-->
     <string name="lockscreen_title">Lockscreen</string>
