Toast icon switch [2/2]
Change-Id: I15d01d3ba39385c327ced58d33f31a30cbe583ac

Conflicts:
	res/values/strings.xml

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -624,4 +624,11 @@
     <string name="doze_notification_color_invert_title">Color inversion</string>
     <string name="doze_notification_color_invert_summary_off">Ambient display notifications will not be inverted. Use for dark themes.</string>
     <string name="doze_notification_color_invert_summary_on">Ambient display notifications will show as inverted. Use for light/stock theme.</string>
+
+    <string name="notification_light_screen_on">Lights with screen on</string>
+    <string name="allow_lights_title">Lights in do not disturb mode</string>
+
+    <!-- Toast Icons -->
+    <string name="toast_icon_title">Toast icon</string>
+    <string name="toast_icon_summary">Display the app icon corresponding with the toast</string>
 </resources>
