--- a/res/values/custom_colors.xml
+++ b/res/values/custom_colors.xml
@@ -18,4 +18,12 @@ limitations under the License.
     <color name="background_tab_pressed">#6633B5E5</color>
     <color name="text_color_white">@android:color/white</color>
     <color name="theme_accent">#ff009688</color>
+    <color name="white">#FFF</color>
+
+    <!-- Expanded desktop -->
+    <drawable name="expanded_item_bg_activated">#ffEEEEEE</drawable>
+    <drawable name="expanded_item_bg">@android:color/background_light</drawable>
+    <color name="expanded_button_color_normal">#4CAF50</color>
+    <color name="expanded_button_color_close">#F44336</color>
+
 </resources>
