--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -924,4 +924,10 @@
     <string name="status_bar_custom_header_default_title">Use poly HD images</string>
     <string name="status_bar_custom_header_default_summary">Enable for poly hd images. Disable for original images.</string>
 
+    <!-- AOSP MultiWindow -->
+    <string name="multiwindow_settings_title">Multi-window</string>
+    <string name="enable_multi_window">Multi-window mode</string>
+    <string name="enable_multi_window_summary">Multiple activities on screen at the same time.</string>
+    <string name="warning_multi_window_text">WARNING: This is a highly experimental feature that allows multiple activities on-screen at the same time through the Recent apps UI. Some apps may crash or not function correctly when used with this feature.</string>
+
 </resources>
