--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -17,7 +17,14 @@
     <string name="mem_info">Memory</string>
     <string name="aosip_version">AOSiP Build</string>
     <string name="build_date">Build date</string>
-    
+
+    <!-- General strings -->
+    <string name="ok">OK</string>
+    <string name="reset">Reset</string>
+    <string name="attention">Attention</string>
+    <string name="enabled">Enabled</string>
+    <string name="default_string">Default</string>
+
     <!-- AOSiP custom settings main -->
     <string name="header_category_personalization">UI settings</string>
     <string name="custom_title">OwlsNest</string>
@@ -129,4 +136,6 @@
     <string name="notification_light_default_value">Default</string>
     <string name="notification_light_missed_call_title">Missed call</string>
     <string name="notification_light_voicemail_title">Voicemail</string>
+    <string name="add">Add</string>
+    <string name="choose_app">Choose app</string>
 </resources>
