Settings: Allow/Prevent notification light in Zen mode (2 of 2) This allows the user to prevent the notification lights from showing during DND mode as per Android 5.0.x +

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -42,6 +42,7 @@
     <string name="profile_reset_title">Reset</string>
     <string name="add">Add</string>
     <string name="choose_app">Choose app</string>
+    <string name="allow_lights_title">Lights in do not disturb mode</string>
 
     <!-- AOSiP custom settings main -->
     <string name="header_category_personalization">UI settings</string>
