--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -43,6 +43,7 @@
     <string name="add">Add</string>
     <string name="choose_app">Choose app</string>
     <string name="allow_lights_title">Lights in do not disturb mode</string>
+    <string name="notification_light_screen_on">Lights with screen on</string>
 
     <!-- AOSiP custom settings main -->
     <string name="header_category_personalization">UI settings</string>
