--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -32,6 +32,27 @@
                     android:targetClass="@string/additional_system_update_menu" />
         </PreferenceScreen-->
 
+        <!-- AOSiP version -->
+	<Preference android:key="aosip_version"
+		style="?android:preferenceInformationStyle"
+		android:title="@string/aosip_version"
+		android:summary="@string/device_info_default"
+                android:icon="@drawable/kronic_logo" />
+
+        <!-- Device firmware version -->
+        <Preference android:key="firmware_version"
+                android:enabled="false"
+                android:shouldDisableView="false"
+                android:title="@string/firmware_version"
+                android:summary="@string/device_info_default"/>
+
+        <!-- Device hardware model -->
+        <Preference android:key="device_model"
+                android:enabled="false"
+                android:shouldDisableView="false"
+                android:title="@string/model_number"
+                android:summary="@string/device_info_default"/>
+
         <!-- Device status - launches activity -->
         <PreferenceScreen android:key="status_info"
                 android:title="@string/device_status"
@@ -65,13 +86,6 @@
                 android:title="@string/device_feedback">
         </PreferenceScreen>
 
-        <!-- Device hardware model -->
-        <Preference android:key="device_model"
-                android:enabled="false"
-                android:shouldDisableView="false"
-                android:title="@string/model_number"
-                android:summary="@string/device_info_default"/>
-
         <!-- Device cpu info -->
         <Preference android:key="device_cpu"
 		style="?android:preferenceInformationStyle"
@@ -83,13 +97,6 @@
 		style="?android:preferenceInformationStyle"
 		android:title="@string/mem_info"
 		android:summary="@string/device_info_default"/>
-
-        <!-- Device firmware version -->
-        <Preference android:key="firmware_version"
-                android:enabled="false"
-                android:shouldDisableView="false"
-                android:title="@string/firmware_version"
-                android:summary="@string/device_info_default"/>
 
         <!-- Security patch level -->
         <Preference android:key="security_patch"
@@ -118,12 +125,6 @@
                 android:shouldDisableView="false"
                 android:title="@string/kernel_version"
                 android:summary="@string/device_info_default"/>
-
-        <!-- AOSiP version -->
-	<Preference android:key="aosip_version"
-		style="?android:preferenceInformationStyle"
-		android:title="@string/aosip_version"
-		android:summary="@string/device_info_default" />
 
 	<!-- Build date -->
 	<Preference android:key="build_date"
