[2/2] unlink notification volume is back
Change-Id: I5712c9bf356f2fcb5826a7ad419f934a2f639ddc

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -230,4 +230,9 @@
     <string name="unlock_scramble_pin_layout_title">Scramble layout</string>
     <string name="unlock_scramble_pin_layout_summary">Scramble PIN layout when unlocking device</string>
 
+    <!-- Linked / unlinked notification volume -->
+    <string name="link_volume_option_title">Link ring and notification volume</string>
+    <string name="notification_volume_option_title">Notification volume</string>
+    <string name="ring_notification_volume_option_title">Ring and notification volume</string>
+
 </resources>
