--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -238,4 +238,9 @@
     <string name="status_bar_quick_qs_pulldown_title">Quick pulldown</string>
     <string name="status_bar_quick_qs_pulldown_summary">Right edge of the status bar pulls down Quick Settings</string>
 
+    <!-- SystemUI tuner -->
+    <string name="quick_settings_title">Quick Settings</string>
+    <string name="status_bar_icon_blacklist_title">Status bar icons</string>
+    <string name="status_bar_icon_blacklist_summary">Configure what icons are shown on status bar</string>
+
 </resources>
