--- a/res/xml/custom_settings.xml
+++ b/res/xml/custom_settings.xml
@@ -24,8 +24,14 @@
             android:title="@string/aosp_navigation_bar" />
 
         <PreferenceScreen
+            android:title="@string/quick_settings_title" >
+                <intent android:action="android.intent.action.MAIN"
+                        android:targetPackage="com.android.systemui"
+                        android:targetClass="com.android.systemui.tuner.QsTunerActivity" />
+        </PreferenceScreen>
+
+        <PreferenceScreen
             android:key="status_bar_settings"
             android:fragment="com.android.settings.custom.StatusBarSettings"
             android:title="@string/status_bar_title" />
-
 </PreferenceScreen>
