--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -78,6 +78,14 @@
     <PreferenceCategory
         android:title="@string/status_bar_misc_title">
 
+        <PreferenceScreen
+            android:title="@string/status_bar_icon_blacklist_title"
+            android:summary="@string/status_bar_icon_blacklist_summary" >
+                <intent android:action="android.intent.action.MAIN"
+                        android:targetPackage="com.android.systemui"
+                        android:targetClass="com.android.systemui.tuner.StatusBarActivity" />
+        </PreferenceScreen>
+
         <com.android.settings.preference.SystemSettingSwitchPreference
             android:key="status_bar_quick_qs_pulldown"
             android:title="@string/status_bar_quick_qs_pulldown_title"
