Implement App circle sidebar [2/2]
- Add vector to replace our old icons
- Increase trigger width, 10px makes it damn near impossible on tablets

Change-Id: Ie2a712073df31ebcde50c925206cd64d9d14931a

--- a/res/xml/aosip_advanced.xml
+++ b/res/xml/aosip_advanced.xml
@@ -39,5 +39,10 @@
         android:key="animation_settings"
         android:title="@string/animation_title"
         android:fragment="com.android.settings.aosip.advanced.AnimationSettings" />
+
+    <PreferenceScreen
+        android:key="app_circle_bar"
+        android:fragment="com.android.settings.benzo.AppCircleBar"
+        android:title="@string/app_circle_bar_title" />
 </PreferenceScreen>
 
