Add back ui settings
Conflicts:
	res/xml/dashboard_categories.xml

Conflicts:
	res/values/custom_strings.xml
	res/xml/dashboard_categories.xml

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -12,6 +12,15 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
+    <!-- AOSiP device info settings -->
+    <string name="cpu_info">CPU</string>
+    <string name="mem_info">Memory</string>
+    <string name="aosip_version">AOSiP Layers Build</string>
+    <string name="build_date">Build date</string>
+    
+    <!-- AOSiP custom settings main -->
+    <string name="header_category_personalization">UI settings</string>
+
     <!-- Custom menus -->
     <string name="custom_title">Custom settings</string>
     <string name="custom_settings_title">Tweaks</string>
@@ -252,10 +261,5 @@
    <string name="usb_data_auto_unlock_summary">Allow unlocked data access to your phone\'s storage through USB (MTP, PTP)</string>
    <string name="usb_data_auto_unlock_warning_summary">Your device will establish unprotected connections, everytime you connect it to a PC. Secured lockscreens disable this option automatically.\n\nThis is still an experimental feature, use with caution.</string>
 
-    <!-- AOSiP device info settings -->
-    <string name="cpu_info">CPU</string>
-    <string name="mem_info">Memory</string>
-    <string name="aosip_version">AOSiP Layers Build</string>
-    <string name="build_date">Build date</string>
-    
+
 </resources>
