--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -12,10 +12,12 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <!-- Solo device info settings -->
+    <!-- AOSiP device info settings -->
     <string name="cpu_info">CPU</string>
     <string name="mem_info">Memory</string>
     <string name="aosip_version">AOSiP Build</string>
     <string name="build_date">Build date</string>
     
+    <!-- AOSiP custom settings main -->
+    <string name="header_category_personalization">UI settings</string>
 </resources>
