--- a/res/xml/dashboard_categories.xml
+++ b/res/xml/dashboard_categories.xml
@@ -72,19 +72,9 @@
 
     </dashboard-category>
 
-    <!-- DEVICE -->
     <dashboard-category
-            android:id="@+id/device_section"
-            android:key="@string/category_key_device"
-            android:title="@string/header_category_device" >
-
-        <!-- Home -->
-        <dashboard-tile
-                android:id="@+id/home_settings"
-                android:title="@string/home_settings"
-                android:fragment="com.android.settings.HomeSettings"
-                android:icon="@drawable/ic_settings_home"
-                />
+        android:id="@+id/personalization_section"
+        android:title="@string/header_category_personalization" >
 
         <!-- Display -->
         <dashboard-tile
@@ -100,6 +90,22 @@
                 android:title="@string/notification_settings"
                 android:fragment="com.android.settings.notification.NotificationSettings"
                 android:icon="@drawable/ic_settings_notifications"
+                />
+
+        </dashboard-category>
+
+        <!-- DEVICE -->
+        <dashboard-category
+            android:id="@+id/device_section"
+            android:key="@string/category_key_device"
+            android:title="@string/header_category_device" >
+
+        <!-- Home -->
+        <dashboard-tile
+                android:id="@+id/home_settings"
+                android:title="@string/home_settings"
+                android:fragment="com.android.settings.HomeSettings"
+                android:icon="@drawable/ic_settings_home"
                 />
 
         <!-- Application Settings -->
@@ -255,7 +261,6 @@
                 android:fragment="com.android.settings.DeviceInfoSettings"
                 android:icon="@drawable/ic_settings_about"
                 />
-
     </dashboard-category>
 
 </dashboard-categories>
