--- a/res/xml/dashboard_categories.xml
+++ b/res/xml/dashboard_categories.xml
@@ -72,19 +72,9 @@
 
     </dashboard-category>
 
-    <!-- DEVICE -->
     <dashboard-category
-            android:id="@+id/device_section"
-            android:key="@string/category_key_device"
-            android:title="@string/header_category_device" >
-
-        <!-- Home -->
-        <dashboard-tile
-                android:id="@+id/home_settings"
-                android:title="@string/home_settings"
-                android:fragment="com.android.settings.HomeSettings"
-                android:icon="@drawable/ic_settings_home"
-                />
+        android:id="@+id/personalization_section"
+        android:title="@string/header_category_personalization" >
 
         <!-- Display -->
         <dashboard-tile
@@ -92,6 +82,14 @@
                 android:title="@string/display_settings"
                 android:fragment="com.android.settings.DisplaySettings"
                 android:icon="@drawable/ic_settings_display"
+                />
+
+        <!-- Notifications -->
+        <dashboard-tile
+                android:id="@+id/notification_settings"
+                android:title="@string/notification_settings"
+                android:fragment="com.android.settings.notification.NotificationSettings"
+                android:icon="@drawable/ic_settings_notifications"
                 />
 
         <!-- Themes -->
@@ -106,12 +104,20 @@
             </intent>
         </dashboard-tile>
 
-        <!-- Notifications -->
+        </dashboard-category>
+
+        <!-- DEVICE -->
+        <dashboard-category
+            android:id="@+id/device_section"
+            android:key="@string/category_key_device"
+            android:title="@string/header_category_device" >
+
+        <!-- Home -->
         <dashboard-tile
-                android:id="@+id/notification_settings"
-                android:title="@string/notification_settings"
-                android:fragment="com.android.settings.notification.NotificationSettings"
-                android:icon="@drawable/ic_settings_notifications"
+                android:id="@+id/home_settings"
+                android:title="@string/home_settings"
+                android:fragment="com.android.settings.HomeSettings"
+                android:icon="@drawable/ic_settings_home"
                 />
 
         <!-- Application Settings -->
@@ -267,7 +273,6 @@
                 android:fragment="com.android.settings.DeviceInfoSettings"
                 android:icon="@drawable/ic_settings_about"
                 />
-
     </dashboard-category>
 
 </dashboard-categories>
