Basic android sliding tabs
This commit is based of https://github.com/astuetz/PagerSlidingTabStrip and has been combined with our Owlsnest app that we used in the past
Most if not all code credit goes to astuetz with minor edits to the basic scheme by me
from here on out we will keep all settings in settings not an external apk but still maintain our sliding tabs

I also roughed in my entire custom owlsnest settings with blank empty tabs to help others better understand how it works so they can use it to

how it works:

Starts with the basic preference screen for main headers (owlsnest.xml)
	*In this file each preference calls a special java(example StatusbarHolder.java) written to impliment its own tabs
	*StatusbarHolder.java then inflates a layout(tab_ui.xml) that sets up the magic PagerSlidingTabs(special tabs at the top) and viewpager(the actual pages)
	*To add /remove tabs you will edit the lines
		**frags[0] = new ClockCategory(); (this needs to be named the same as the java used for the settings page you want to add
		**getString(R.string.clock_category), (this will give your tab the name

Special thanks to astuetz without his original work this wouldnt be possible on AOSiP

For more detailed instruction on how to impliment this see https://android-arsenal.com/details/1/1100

N bringup by @xlxfoxxlx

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -42,4 +42,35 @@
     <string name="summary_heads_up_enabled">Pop-up notifications are enabled</string>
     <string name="summary_heads_up_disabled">Pop-up notifications are disabled</string>
 
+    <!--Owlsnest statusbar-->
+    <string name="statusbar_bar_title">Statusbar options</string>
+    <string name="statusbar_bar_summary">Adjust items like battery,clock,icons,and colors</string>
+    <string name="clock_category">Clock</string>
+    <string name="battery_category">Battery</string>
+    <string name="icon_category">Icons</string>
+    <string name="extra_category">Extras</string>
+
+    <!--Owlsnest navigation-->
+    <string name="navigation_title">Navigation bar options</string>
+    <string name="navigation_summary">Customize Navbar size,buttons,layout,and colors</string>
+    <string name="navigationbuttons_category">Layouts</string>
+    <string name="navigation_dimen_category">Navbar size</string>
+
+    <!--Owlsnest buttons-->
+    <string name="buttons_title">Hardware buttons</string>
+    <string name="buttons_summary">Tweak the actions of your volume and power buttons</string>
+    <string name="powermenu_category">Power button</string>
+    <string name="volume_category">Volume buttons</string>
+
+    <!--Owlsnest lockscreen-->
+    <string name="lockscreen_title">Lockscreen</string>
+    <string name="lockscreen_summary">Options for weather</string>
+    <string name="weather_category">Lockscreen weather</string>
+
+    <!--Owlsnest advanced-->
+    <string name="advanced_title">Advanced UI</string>
+    <string name="advanced_summary">Heavy custom features</string>
+    <string name="gestureanywhere_category">Gesture anywhere</string>
+    <string name="sidebar_category">App sidebar</string>
+
 </resources>
