--- a/res/xml/dashboard_categories.xml
+++ b/res/xml/dashboard_categories.xml
@@ -76,25 +76,9 @@
         android:id="@+id/personalization_section"
         android:title="@string/header_category_personalization" >
 
-        <!-- Display -->
-        <dashboard-tile
-                android:id="@+id/display_settings"
-                android:title="@string/display_settings"
-                android:fragment="com.android.settings.DisplaySettings"
-                android:icon="@drawable/ic_settings_display"
-                />
-
-        <!-- Notifications -->
-        <dashboard-tile
-                android:id="@+id/notification_settings"
-                android:title="@string/notification_settings"
-                android:fragment="com.android.settings.notification.NotificationSettings"
-                android:icon="@drawable/ic_settings_notifications"
-                />
-
-        <!-- OwlsNest -->
+    <!-- OwlsNest -->
        <dashboard-tile
-            android:id="@+id/Owlsnest"
+            android:id="@+id/owlsnest_settings"
             android:title="@string/custom_title"
             android:fragment="com.android.settings.aosip.OwlsNestSettings"
             android:icon="@drawable/ic_settings_illusion"
@@ -111,6 +95,22 @@
                 <categories android:name="cyanogenmod.intent.category.APP_THEMES" />
             </intent>
         </dashboard-tile>
+
+        <!-- Display -->
+        <dashboard-tile
+                android:id="@+id/display_settings"
+                android:title="@string/display_settings"
+                android:fragment="com.android.settings.DisplaySettings"
+                android:icon="@drawable/ic_settings_display"
+                />
+
+        <!-- Notifications -->
+        <dashboard-tile
+                android:id="@+id/notification_settings"
+                android:title="@string/notification_settings"
+                android:fragment="com.android.settings.notification.NotificationSettings"
+                android:icon="@drawable/ic_settings_notifications"
+                />
 
         </dashboard-category>
 
