AOSiP Logo on Status Bar (2/2)
PS2: Code fixup
PS3: fix layout

Change-Id: Ia6309c8039cc3484b0220527d741cf26c6c4fa9e

Conflicts:
	res/xml/statusbar_layout.xml
	src/com/lordclockan/aicpextras/StatusBarFragment.java

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -961,4 +961,12 @@
     <string name="lockscreen_colors_reset_message">Are you sure you want to reset these colors to default?</string>
     <string name="yes">YES</string>
 
+    <!-- Statusbar AOSIP logo -->
+
+    <string name="aosip_logo">AOSIP logo</string>
+    <string name="status_bar_aosip_logo_title">AOSIP logo</string>
+    <string name="status_bar_aosip_logo_summary">Enable to show AOSIP logo on the left side of statusbar</string>
+    <string name="status_bar_aosip_logo_color">AOSIP logo color</string>
+
+
 </resources>
